--- a/css/styles600.css
+++ b/css/styles600.css
@@ -61,6 +61,7 @@ nav {
   height: 80px;
   background-color: #252831;
   text-align:center;
+	z-index: 100;
 }
 nav h1 {
   margin: auto;
@@ -78,7 +79,7 @@ nav h1 a {
     background-color: #eee;
     font-size: 17px;
     margin: 0;
-    width: calc(50% - 80px);
+		z-index: 100;
 }
 
 /* Display list items side by side */
@@ -106,9 +107,10 @@ nav h1 a {
 }
 /* ====================== Map ====================== */
 #map {
-  height: 400px;
+  height: 300px;
   width: 100%;
   background-color: #ccc;
+	z-index: 0;
 }
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
@@ -194,31 +196,28 @@ nav h1 a {
 .inside header {
   position: fixed;
   top: 0;
-  width: 100%;
+	width: 100%;
   z-index: 1000;
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+  width: 100%;
+	height: 275px;
+	margin-top: 125px;
 }
 .inside #map {
-  background-color: #ccc;
-  height: 100%;
-  width: 100%;
+	height: 400px;
+	width: 100%;
+	background-color: #ccc;
 }
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
 }
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
-  font-size: 16pt;
+  font-size: 12pt;
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
@@ -248,7 +247,6 @@ nav h1 a {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
-  width: 50%;
 }
 #reviews-container {
   padding: 30px 40px 80px;
