--- a/css/stylesLarge.css
+++ b/css/stylesLarge.css
@@ -76,7 +76,7 @@ nav h1 a {
     padding: 10px 40px 16px;
     list-style: none;
     background-color: #eee;
-    font-size: 17px;
+    font-size: 20px;
     margin: 0;
     width: calc(50% - 80px);
 }
@@ -201,7 +201,7 @@ nav h1 a {
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
+  height: 94%;
   position: fixed;
   right: 0;
   top: 80px;
@@ -215,7 +215,7 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: calc(50% - 50px);
 }
 #restaurant-name {
   color: #f18200;
@@ -231,13 +231,13 @@ nav h1 a {
 	width: 90%;
 }
 #restaurant-address {
-  font-size: 10pt;
+  font-size: 12pt;
   margin: 10px 0px;
 }
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 12pt;
+  font-size: 15pt;
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
@@ -250,7 +250,7 @@ nav h1 a {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
-  width: 50%;
+  width: 45%;
 }
 #reviews-container {
   padding: 30px 40px 80px;
