--- a/css/styles600.css
+++ b/css/styles600.css
@@ -38,6 +38,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 #header {
 	padding: 1em;
+	margin-bottom: 50px;
 }
 #maincontent {
 	display: grid;
@@ -203,7 +204,7 @@ nav h1 a {
   background: blue none repeat scroll 0 0;
   width: 100%;
 	height: 275px;
-	margin-top: 125px;
+	margin: 50px 0 250px 0;
 }
 .inside #map {
 	height: 400px;
