--- a/css/styles600.css
+++ b/css/styles600.css
@@ -158,7 +158,7 @@ nav h1 a {
 	min-width: 200px;
   min-height: 300px;
   padding: 25px 5px 25px 5px;
-	margin-bottom: 0.5em;
+	margin-bottom: 1em;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -265,7 +265,7 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
+  border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
   margin: 0 0 30px;
@@ -279,4 +279,13 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+.review-name {
+	padding: 0.5em 0 0.5em 0;
+	border-bottom: 2px solid #f3f3f3;
+	border-left: 2px solid #f3f3f3;
+	border-right: 2px solid #f3f3f3;
+	text-align: center;
+	line-height: 1.3rem;
+	font-size: 1rem;
 }
